Completed index9 work
Fixed box sizes for all sections
completed ig feed, footer, and footer img sections
adjusted sizing for all text boxes

--- a/index9.html
+++ b/index9.html
@@ -39,11 +39,13 @@
     <div class="spacing"></div>
     
     <section id="hero-image">
-        <ul>
-            <li><img src="images/agata-create-unsplash-AQEzqWqnVaS3eKx5.avif" alt="Chair 1"></li>
-            <li><img src="images/daniil-silantev-unsplash-YleXlbbvg6U9PDB9.avif" alt="chair 2"></li>
-            <li><img src="images/jean-philippe-delberghe-PVQnaFyePvU-unsplash-mnl08bgoeeHyRV0W.avif" alt="table 1"></li>
-        </ul>
+        <div>
+            <ul>
+                <li><img src="images/agata-create-unsplash-AQEzqWqnVaS3eKx5.avif" alt="Chair 1"></li>
+                <li><img src="images/daniil-silantev-unsplash-YleXlbbvg6U9PDB9.avif" alt="chair 2"></li>
+                <li><img src="images/jean-philippe-delberghe-PVQnaFyePvU-unsplash-mnl08bgoeeHyRV0W.avif" alt="table 1"></li>
+            </ul>
+        </div>
     </section>
 
     <div class="spacing"></div>
@@ -73,39 +75,66 @@
     <div class="spacing"></div>
 
     <section id="insta-feed">
-        <p>Instagram Feed</p>
+        <h3>Instagram Feed</h3>
         <div>
             <img class="ig-padding" src="images/ff9d0804113d04a0e3bfc1f195dd2d7a.jpg" alt="Chairs">
 			<img class="ig-padding" src="images/room.jpg" alt="bedroom">
 			<img class="ig-padding" src="images/wood.jpg" alt="Wooden Furniture">
 			<img src="images/alma-sideboard-oak-cane-1655291407.jpg" alt="more furniture">
         </div>
+        <button>Follow Us</button>
     </section>
 
     <div class="spacing"></div>
 
     <section id="have-question" class="small-section">
         <div>
-            <h3>Have a question?</h3>
+            <h1>Have a question?</h1>
             <p>Left your email and we will contact you soon</p>
         </div>
         <form>            
             <label for="first">Name*</label><br>
-            <input type="text" id="first" name="firstname" class="box-design" placeholder="Your name">
+            <input type="text" id="first" name="firstname" placeholder="Your name">
             <label for="last">Last name</label><br>
-            <input type="text" id="last" name="lastname" class=" box-design" placeholder="Your last name">
+            <input type="text" id="last" name="lastname"  placeholder="Your last name">
             <label for="email">Your email*</label><br>
-            <input type="text" id="first" name="firstname" class="box-design" placeholder="example@mail.com">
+            <input type="text" id="first" name="firstname"  placeholder="example@mail.com">
             <label for="comments">Comments*</label><br>
-            <textarea id="comments" class="box-design" rows="5" cols="55" placeholder="Enter your message"></textarea>    
+            <textarea id="comments"  rows="5" cols="55" placeholder="Enter your message"></textarea>    
             <button class="buttons">Contact me</button>
         </form>
     </section>
 
-    <section id="footer-img"></section>
+    <div class="spacing"></div>
 
-    <footer id="footer">
+    <section id="footer-img">
+        <img src="images/photo-1511097799136-3661d1bb586c.avif" alt="footer-img">
+    </section>
 
-    </footer>
+     <div class="spacing-small"></div>
+
+    <section id="footer" class="small-section">
+        <div class="small-col">
+            <h2>Address</h2>
+            <p>3721 Single Street <br> Quincy, MA 02169</p>
+            <div class="spacing-small"></div>
+            <img src="images/icons/twitter-1.png" alt="Twitter">
+			<img src="images/icons/facebook-6.png" alt="Facebook">
+			<img src="images/icons/instagram-11.png" alt="Instagram">
+        </div>
+        <div class="small-col">
+            <h2>Contacts</h2>
+            <p>123-456-7890 <br> info@fips.com</p>
+        </div>
+        <div class="large-col">
+            <h2>Subscribe to our newsletter</h2>
+            <div class="spacing-small"></div>
+            <form>
+                <label for="email-2">Email address*</label><br>
+                <input type="text" id="email-2" name="email-2"  placeholder="Your email address">
+                <button class="buttons">Submit</button>
+            </form>
+        </div>
+    </section>
 </body>
 </html>
