store buttons and home page buttons changed so that they have class now

--- a/index9.html
+++ b/index9.html
@@ -33,7 +33,7 @@
         <p>
             We have made quality our habit. It’s not something that we just strive for – we live by <br> this principle every day. 
         </p>
-        <button>Our store</button>
+        <button class="home-page_button">Our store</button>
     </section>
 
     <div class="spacing"></div>
@@ -80,7 +80,7 @@
 			<img class="ig-padding" src="images/wood.jpg" alt="Wooden Furniture">
 			<img src="images/alma-sideboard-oak-cane-1655291407.jpg" alt="more furniture">
         </div>
-        <button>Follow Us</button>
+        <button class="home-page_button">Follow Us</button>
     </section>
 
     <div class="spacing"></div>
@@ -99,7 +99,7 @@
             <input type="text" id="first" name="firstname"  placeholder="example@mail.com">
             <label for="comments">Comments*</label><br>
             <textarea id="comments"  rows="5" cols="55" placeholder="Enter your message"></textarea>    
-            <button class="buttons">Contact me</button>
+            <button class="home-page_button">Contact me</button>
         </form>
     </section>
 
@@ -130,7 +130,7 @@
             <form>
                 <label for="email-2">Email address*</label><br>
                 <input type="text" id="email-2" name="email-2"  placeholder="Your email address">
-                <button class="buttons">Submit</button>
+                <button class="home-page_button">Submit</button>
             </form>
         </div>
     </section>
