--- a/store-page.html
+++ b/store-page.html
@@ -15,22 +15,25 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title>Store Page</title>
 </head>
 <body>
   
-  <div id="menu_shadow">
-    <section id="header">
+  <section id="menu_shadow">
+    <div id="header">
         <img id="logo" src="images/logo-black-mxB0QG5WNWCDekL1.svg" alt="logo">
         <ul id="menu" >
-            <li class="selected padding-right">Home</li>
+            <li class="selected padding-right"><a href=index9.html>Home</a></li>
             <li class="padding-right"><a href=store-page.html>Store</a></li>
             <li class="padding-right">Customer Care</li>
             <li class="padding-right">Contacts</li>
             <li><img src="images/icons/shopping-bag-2.png" alt="bag-icon">Shopping Bag (0)</li>
         </ul>
-    </section>
-  </div>
+    </div>
+</section>
 
   <section id="its-easy" class="small-section about-us">
     <div>
@@ -187,7 +190,7 @@
         <form>
             <label for="email-2">Email address*</label><br>
             <input type="text" id="email-2" name="email-2"  placeholder="Your email address">
-            <button class="buttons">Submit</button>
+            <button class="home-page_button">Submit</button>
         </form>
     </div>
   </section>
